--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <td colspan="3"><input value="" id="input" /></td>
       </tr>
       <tr>
-        <td><button value="1" >1</button></td>
-        <td><button value="2" >2</button></td>
+        <td><button value="1" class="rotating">1</button></td>
+        <td><button value="2" id="moving">2</button></td>
         <td><button value="3" >3</button></td>
       </tr>
       <tr>
